adding xz reading query

--- a/new-data-reader.ipynb
+++ b/new-data-reader.ipynb
@@ -52,56 +52,80 @@
     "aug23 = {}\n",
     "for d in hd:\n",
     "    if hd[d][\"timeUTC\"][:10] == \"2019-08-23\":\n",
-    "        aug23[d] = hd[d]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# len(list(hd.values()))\n",
-    "len(aug23)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        aug23[d] = hd[d]\n",
     "json.dump(aug23, open(\"aug23.json\", \"w\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "alldf = pd.io.json.json_normalize(list(hd.values()))"
+    "# len(list(hd.values()))\n",
+    "len(hd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lzma\n",
+    "import json\n",
+    "aug23 = json.loads((lzma.open('aug23.json.xz')).read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2019-08-16'"
+       "33668"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(hd.values())[0][\"timeUTC\"][:10]"
+    "len(aug23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "# alldf = pd.io.json.json_normalize(list(hd.values()))\n",
+    "alldf = pd.io.json.json_normalize(list(aug23.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33668"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(alldf)"
    ]
   },
   {
@@ -162,23 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([nan, 'null', 'None', 'HubScreen', 'FlagScreen',\n",
-       "       'StateMachineScreen_Creature1', 'StateMachineScreen_Creature0',\n",
-       "       'RainbowWaitScreen', 'StateMachineScreen_Creature2',\n",
-       "       'StateMachineScreen_Creature3', 'RainbowScreen'], dtype=object)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alldf[\"player1CurrentScreen\"].unique()"
    ]
