adding case4's csv as well

--- a/new-data-reader.ipynb
+++ b/new-data-reader.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,26 @@
    "outputs": [],
    "source": [
     "ar2.to_csv(\"case4.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(ar2[\"timeUTC\"]) < \"2019-08-24T08:00:00\""
    ]
   },
   {
@@ -51690,226 +51710,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'activeCreatureCount': 2,\n",
-       " 'eventKey': 'CreatureStateChanged',\n",
-       " 'eventType': 'GameEvent',\n",
-       " 'eventUniqueId': '58ca41e6-9bd5-4517-8dc3-329732ae6e44',\n",
-       " 'flags': {'0': {'creatureName': 'Player2Creature1',\n",
-       "   'creatureType': 'Conditional',\n",
-       "   'id': 'Flag_11673',\n",
-       "   'isPlaced': True,\n",
-       "   'isPositionValid': True,\n",
-       "   'ownedBy': 'Player2',\n",
-       "   'x': -5,\n",
-       "   'y': -4},\n",
-       "  '1': {'creatureName': 'Player1Creature1',\n",
-       "   'creatureType': 'Probability',\n",
-       "   'id': 'Flag_10769',\n",
-       "   'isPlaced': True,\n",
-       "   'isPositionValid': True,\n",
-       "   'ownedBy': 'Player1',\n",
-       "   'x': -9,\n",
-       "   'y': -1},\n",
-       "  '2': {'creatureName': 'Player1Creature1',\n",
-       "   'creatureType': 'Conditional',\n",
-       "   'id': 'Flag_11109',\n",
-       "   'isPlaced': True,\n",
-       "   'isPositionValid': True,\n",
-       "   'ownedBy': 'Player1',\n",
-       "   'x': -9,\n",
-       "   'y': -4}},\n",
-       " 'gameVersion': '1.1',\n",
-       " 'gardenPercentageFilled': 0.04,\n",
-       " 'leafyCount': 0,\n",
-       " 'logVersion': '1.1.0',\n",
-       " 'mushroomCount': 2,\n",
-       " 'orbLeafyCount': 5,\n",
-       " 'orbMushroomCount': 5,\n",
-       " 'orbWoodyCount': 3,\n",
-       " 'placedFlagCount': 3,\n",
-       " 'plants': {'0': {'creatureWhoPlanted': 'Player1Creature1',\n",
-       "   'id': 'Plant_11080',\n",
-       "   'lastWateredBy': 'Player1CreatureCreatureIndex 2',\n",
-       "   'plantState': 'Vibrant',\n",
-       "   'plantType': 'Mushroom',\n",
-       "   'playerWhoPlanted': 'Player1',\n",
-       "   'x': -9,\n",
-       "   'y': -3},\n",
-       "  '1': {'creatureWhoPlanted': 'Player1Creature1',\n",
-       "   'id': 'Plant_11079',\n",
-       "   'lastWateredBy': 'Player1CreatureCreatureIndex 2',\n",
-       "   'plantState': 'Vibrant',\n",
-       "   'plantType': 'Mushroom',\n",
-       "   'playerWhoPlanted': 'Player1',\n",
-       "   'x': -8,\n",
-       "   'y': -3}},\n",
-       " 'player1Creature1': {'cardsExecuted': -1,\n",
-       "  'creatureType': 'Hedgehog',\n",
-       "  'currentCard': 'Empty',\n",
-       "  'currentStateIndex': -1,\n",
-       "  'emptiesWatered': -1,\n",
-       "  'flagId': '',\n",
-       "  'loopCount': -1,\n",
-       "  'machineType': 'Sequential',\n",
-       "  'plantsPlanted': -1,\n",
-       "  'plantsWatered': -1,\n",
-       "  'starsEarned': -1,\n",
-       "  'status': 'Unlocked',\n",
-       "  'trayCards': 'null',\n",
-       "  'usedCards': 'null'},\n",
-       " 'player1Creature2': {'cardsExecuted': 2,\n",
-       "  'creatureType': 'Salamander',\n",
-       "  'currentCard': 'Empty',\n",
-       "  'currentStateIndex': 1,\n",
-       "  'emptiesWatered': 0,\n",
-       "  'flagId': 'Flag_10769',\n",
-       "  'loopCount': 0,\n",
-       "  'machineType': 'Probability',\n",
-       "  'plantsPlanted': 2,\n",
-       "  'plantsWatered': 0,\n",
-       "  'starsEarned': 1,\n",
-       "  'status': 'Active',\n",
-       "  'trayCards': {'0': 'Random_Corners_Mushroom',\n",
-       "   '1': 'Empty',\n",
-       "   '2': 'Random_Plus_Water',\n",
-       "   '3': 'Random_Plus_Leafy',\n",
-       "   '4': 'Empty',\n",
-       "   '5': 'Empty'},\n",
-       "  'usedCards': {'0': 'Random_Corners_Woody',\n",
-       "   '1': 'Random_Plus_Woody',\n",
-       "   '2': 'Random_Corners_Water'}},\n",
-       " 'player1Creature3': {'cardsExecuted': 497,\n",
-       "  'creatureType': 'Bird',\n",
-       "  'currentCard': 'Random_Plus_Water',\n",
-       "  'currentStateIndex': 1,\n",
-       "  'emptiesWatered': 186,\n",
-       "  'flagId': 'Flag_11109',\n",
-       "  'loopCount': 248,\n",
-       "  'machineType': 'Conditional',\n",
-       "  'plantsPlanted': 0,\n",
-       "  'plantsWatered': 311,\n",
-       "  'starsEarned': 2,\n",
-       "  'status': 'Active',\n",
-       "  'trayCards': {'0': 'Specific_BR_Leafy',\n",
-       "   '1': 'Empty',\n",
-       "   '2': 'Empty',\n",
-       "   '3': 'Random_Corners_Leafy',\n",
-       "   '4': 'Empty',\n",
-       "   '5': 'Random_Corners_Woody'},\n",
-       "  'usedCards': {'0': 'Random_Plus_Water',\n",
-       "   '1': 'Specific_B_Leafy',\n",
-       "   '2': 'Specific_TR_Water'}},\n",
-       " 'player1CurrentScreen': 'StateMachineScreen_Creature3',\n",
-       " 'player1SelectedCreature': 3,\n",
-       " 'player2Creature1': {'cardsExecuted': -1,\n",
-       "  'creatureType': 'Hedgehog',\n",
-       "  'currentCard': 'Empty',\n",
-       "  'currentStateIndex': -1,\n",
-       "  'emptiesWatered': -1,\n",
-       "  'flagId': '',\n",
-       "  'loopCount': -1,\n",
-       "  'machineType': 'Sequential',\n",
-       "  'plantsPlanted': -1,\n",
-       "  'plantsWatered': -1,\n",
-       "  'starsEarned': -1,\n",
-       "  'status': 'Unlocked',\n",
-       "  'trayCards': 'null',\n",
-       "  'usedCards': 'null'},\n",
-       " 'player2Creature2': {'cardsExecuted': -1,\n",
-       "  'creatureType': 'Salamander',\n",
-       "  'currentCard': 'Empty',\n",
-       "  'currentStateIndex': -1,\n",
-       "  'emptiesWatered': -1,\n",
-       "  'flagId': '',\n",
-       "  'loopCount': -1,\n",
-       "  'machineType': 'Probability',\n",
-       "  'plantsPlanted': -1,\n",
-       "  'plantsWatered': -1,\n",
-       "  'starsEarned': -1,\n",
-       "  'status': 'Locked',\n",
-       "  'trayCards': 'null',\n",
-       "  'usedCards': 'null'},\n",
-       " 'player2Creature3': {'cardsExecuted': -1,\n",
-       "  'creatureType': 'Bird',\n",
-       "  'currentCard': 'Empty',\n",
-       "  'currentStateIndex': -1,\n",
-       "  'emptiesWatered': -1,\n",
-       "  'flagId': 'Flag_11673',\n",
-       "  'loopCount': -1,\n",
-       "  'machineType': 'Conditional',\n",
-       "  'plantsPlanted': -1,\n",
-       "  'plantsWatered': -1,\n",
-       "  'starsEarned': -1,\n",
-       "  'status': 'FlagPlaced',\n",
-       "  'trayCards': {'0': 'Specific_BR_Woody',\n",
-       "   '1': 'Random_Plus_Woody',\n",
-       "   '2': 'Specific_T_Leafy',\n",
-       "   '3': 'Random_Corners_Water',\n",
-       "   '4': 'Specific_R_Leafy',\n",
-       "   '5': 'Random_Plus_Water'},\n",
-       "  'usedCards': {'0': 'Empty', '1': 'Empty', '2': 'Empty'}},\n",
-       " 'player2CurrentScreen': 'StateMachineScreen_Creature3',\n",
-       " 'player2SelectedCreature': 3,\n",
-       " 'rainbow1x1Count': 0,\n",
-       " 'rainbow1x3Count': 0,\n",
-       " 'rainbow3x1Count': 0,\n",
-       " 'rainbow3x3Count': 0,\n",
-       " 'seedPacketCount': 0,\n",
-       " 'sessionGuid': '2b85bdf3-ae51-4a8c-b2ba-beba33f556b3',\n",
-       " 'siteName': 'Lawrence',\n",
-       " 'timeEpoch': 1566604809,\n",
-       " 'timeUTC': '2019-08-24T00:00:09',\n",
-       " 'totalPlantCount': 2,\n",
-       " 'treasure': {'0': {'correctNeighbors': 0,\n",
-       "   'id': 'TreasureChest_11635',\n",
-       "   'incorrectNeighbors': 0,\n",
-       "   'isOpening': False,\n",
-       "   'isWarning': False,\n",
-       "   'lockCount': 3,\n",
-       "   'openedCooperatively': 'Unknown',\n",
-       "   'plantType': 'Woody',\n",
-       "   'x': 1,\n",
-       "   'y': 1},\n",
-       "  '1': {'correctNeighbors': 0,\n",
-       "   'id': 'TreasureChest_11664',\n",
-       "   'incorrectNeighbors': 0,\n",
-       "   'isOpening': False,\n",
-       "   'isWarning': False,\n",
-       "   'lockCount': 1,\n",
-       "   'openedCooperatively': 'Unknown',\n",
-       "   'plantType': 'Leafy',\n",
-       "   'x': -4,\n",
-       "   'y': -3},\n",
-       "  '2': {'correctNeighbors': 0,\n",
-       "   'id': 'TreasureChest_11655',\n",
-       "   'incorrectNeighbors': 0,\n",
-       "   'isOpening': False,\n",
-       "   'isWarning': False,\n",
-       "   'lockCount': 2,\n",
-       "   'openedCooperatively': 'Unknown',\n",
-       "   'plantType': 'Leafy',\n",
-       "   'x': 3,\n",
-       "   'y': -4}},\n",
-       " 'treasureCount': 3,\n",
-       " 'woodyCount': 0}"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "########Code to look for logs from specific event types############\n",
     "# PlantPlanted, PlantWatered, CreatureStateChanged\n",
     "for d in aug23:\n",
-    "    if aug23[d][\"eventKey\"] == \"CreatureStateChanged\":\n",
+    "    if aug23[d][\"eventKey\"] == \"CardSwapped\":\n",
     "#     if aug23[d][\"player1Creature2\"][\"usedCards\"] != 'null':\n",
     "        break\n",
     "aug23[d]"
