--- a/new-data-reader.ipynb
+++ b/new-data-reader.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "34046"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,12 +244,454 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "alldf = pd.io.json.json_normalize(list(hd.values()))"
+    "# alldf = pd.io.json.json_normalize(list(hd.values()))\n",
+    "alldf = pd.json_normalize(list(aug23.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_json(\"aug23.json\",orient='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2[[\"eventKey\", \"flags\", \"treasure\"]].to_csv(\"sub23.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>activeCreatureCount</th>\n",
+       "      <th>eventKey</th>\n",
+       "      <th>eventType</th>\n",
+       "      <th>eventUniqueId</th>\n",
+       "      <th>gameVersion</th>\n",
+       "      <th>gardenPercentageFilled</th>\n",
+       "      <th>leafyCount</th>\n",
+       "      <th>logVersion</th>\n",
+       "      <th>mushroomCount</th>\n",
+       "      <th>orbLeafyCount</th>\n",
+       "      <th>...</th>\n",
+       "      <th>plants.161.x</th>\n",
+       "      <th>plants.161.y</th>\n",
+       "      <th>plants.162.creatureWhoPlanted</th>\n",
+       "      <th>plants.162.id</th>\n",
+       "      <th>plants.162.lastWateredBy</th>\n",
+       "      <th>plants.162.plantState</th>\n",
+       "      <th>plants.162.plantType</th>\n",
+       "      <th>plants.162.playerWhoPlanted</th>\n",
+       "      <th>plants.162.x</th>\n",
+       "      <th>plants.162.y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>PlantWatered</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>710ecffe-56a1-46b8-aa6b-14681dce9585</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>CreatureStateChanged</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>58ca41e6-9bd5-4517-8dc3-329732ae6e44</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>CreatureStateChanged</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>3f771796-5e77-4859-ab3f-bac30d873869</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>PlantWatered</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>ff217f37-50fa-48bc-9808-39ffc60c45fe</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>CreatureStateChanged</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>a9413ec6-786c-4af3-86a0-b21185f2e97b</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34041</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>CreatureStateChanged</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>c934bbc5-0ef9-422b-b287-049f1624db62</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34042</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PlantWatered</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>ee022ba3-585c-47ce-8e1f-8c783b2d5257</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34043</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>CreatureStateChanged</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>e64cc82c-3bdc-425a-b38a-cd1469aded1a</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34044</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>CreatureStateChanged</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>49c22b9e-43b2-4f21-87ab-8105e17ca5e7</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34045</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>CreatureStateChanged</td>\n",
+       "      <td>GameEvent</td>\n",
+       "      <td>cbc7df6f-3916-47e5-bc98-ca4eaa6a6d81</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>34046 rows × 1701 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       activeCreatureCount              eventKey  eventType  \\\n",
+       "0                      2.0          PlantWatered  GameEvent   \n",
+       "1                      2.0  CreatureStateChanged  GameEvent   \n",
+       "2                      2.0  CreatureStateChanged  GameEvent   \n",
+       "3                      2.0          PlantWatered  GameEvent   \n",
+       "4                      2.0  CreatureStateChanged  GameEvent   \n",
+       "...                    ...                   ...        ...   \n",
+       "34041                  1.0  CreatureStateChanged  GameEvent   \n",
+       "34042                  1.0          PlantWatered  GameEvent   \n",
+       "34043                  1.0  CreatureStateChanged  GameEvent   \n",
+       "34044                  1.0  CreatureStateChanged  GameEvent   \n",
+       "34045                  1.0  CreatureStateChanged  GameEvent   \n",
+       "\n",
+       "                              eventUniqueId gameVersion  \\\n",
+       "0      710ecffe-56a1-46b8-aa6b-14681dce9585         1.1   \n",
+       "1      58ca41e6-9bd5-4517-8dc3-329732ae6e44         1.1   \n",
+       "2      3f771796-5e77-4859-ab3f-bac30d873869         1.1   \n",
+       "3      ff217f37-50fa-48bc-9808-39ffc60c45fe         1.1   \n",
+       "4      a9413ec6-786c-4af3-86a0-b21185f2e97b         1.1   \n",
+       "...                                     ...         ...   \n",
+       "34041  c934bbc5-0ef9-422b-b287-049f1624db62         1.1   \n",
+       "34042  ee022ba3-585c-47ce-8e1f-8c783b2d5257         1.1   \n",
+       "34043  e64cc82c-3bdc-425a-b38a-cd1469aded1a         1.1   \n",
+       "34044  49c22b9e-43b2-4f21-87ab-8105e17ca5e7         1.1   \n",
+       "34045  cbc7df6f-3916-47e5-bc98-ca4eaa6a6d81         1.1   \n",
+       "\n",
+       "       gardenPercentageFilled  leafyCount logVersion  mushroomCount  \\\n",
+       "0                        0.04         0.0      1.1.0            2.0   \n",
+       "1                        0.04         0.0      1.1.0            2.0   \n",
+       "2                        0.04         0.0      1.1.0            2.0   \n",
+       "3                        0.04         0.0      1.1.0            2.0   \n",
+       "4                        0.04         0.0      1.1.0            2.0   \n",
+       "...                       ...         ...        ...            ...   \n",
+       "34041                    0.04         2.0      1.1.0            2.0   \n",
+       "34042                    0.04         2.0      1.1.0            2.0   \n",
+       "34043                    0.04         2.0      1.1.0            2.0   \n",
+       "34044                    0.04         2.0      1.1.0            2.0   \n",
+       "34045                    0.04         2.0      1.1.0            2.0   \n",
+       "\n",
+       "       orbLeafyCount  ...  plants.161.x  plants.161.y  \\\n",
+       "0                5.0  ...           NaN           NaN   \n",
+       "1                5.0  ...           NaN           NaN   \n",
+       "2                5.0  ...           NaN           NaN   \n",
+       "3                5.0  ...           NaN           NaN   \n",
+       "4                5.0  ...           NaN           NaN   \n",
+       "...              ...  ...           ...           ...   \n",
+       "34041            0.0  ...           NaN           NaN   \n",
+       "34042            0.0  ...           NaN           NaN   \n",
+       "34043            0.0  ...           NaN           NaN   \n",
+       "34044            0.0  ...           NaN           NaN   \n",
+       "34045            0.0  ...           NaN           NaN   \n",
+       "\n",
+       "       plants.162.creatureWhoPlanted plants.162.id  plants.162.lastWateredBy  \\\n",
+       "0                                NaN           NaN                       NaN   \n",
+       "1                                NaN           NaN                       NaN   \n",
+       "2                                NaN           NaN                       NaN   \n",
+       "3                                NaN           NaN                       NaN   \n",
+       "4                                NaN           NaN                       NaN   \n",
+       "...                              ...           ...                       ...   \n",
+       "34041                            NaN           NaN                       NaN   \n",
+       "34042                            NaN           NaN                       NaN   \n",
+       "34043                            NaN           NaN                       NaN   \n",
+       "34044                            NaN           NaN                       NaN   \n",
+       "34045                            NaN           NaN                       NaN   \n",
+       "\n",
+       "      plants.162.plantState  plants.162.plantType  \\\n",
+       "0                       NaN                   NaN   \n",
+       "1                       NaN                   NaN   \n",
+       "2                       NaN                   NaN   \n",
+       "3                       NaN                   NaN   \n",
+       "4                       NaN                   NaN   \n",
+       "...                     ...                   ...   \n",
+       "34041                   NaN                   NaN   \n",
+       "34042                   NaN                   NaN   \n",
+       "34043                   NaN                   NaN   \n",
+       "34044                   NaN                   NaN   \n",
+       "34045                   NaN                   NaN   \n",
+       "\n",
+       "       plants.162.playerWhoPlanted  plants.162.x  plants.162.y  \n",
+       "0                              NaN           NaN           NaN  \n",
+       "1                              NaN           NaN           NaN  \n",
+       "2                              NaN           NaN           NaN  \n",
+       "3                              NaN           NaN           NaN  \n",
+       "4                              NaN           NaN           NaN  \n",
+       "...                            ...           ...           ...  \n",
+       "34041                          NaN           NaN           NaN  \n",
+       "34042                          NaN           NaN           NaN  \n",
+       "34043                          NaN           NaN           NaN  \n",
+       "34044                          NaN           NaN           NaN  \n",
+       "34045                          NaN           NaN           NaN  \n",
+       "\n",
+       "[34046 rows x 1701 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alldf[[\"eventKey\", ]]"
    ]
   },
   {
@@ -66509,7 +66951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
